# crawlers

./: .gitignore  Dockerfile  README.md  app.py  build-and-push.sh  common.yaml  compose.yaml  entry_script.sh  invoke.sh  jdl.yaml  main.py  pyproject.toml  serveless.yaml
config/: acrc.yaml  common.yaml  conexao.yaml  jdl.yaml  zelt.yaml
config/dev/: jdl.yaml
crawler/: app.py  main.py
crawler/database/: db.py  dynamo_db.py  local_db.py
crawler/engine/: crawler_engine.py
crawler/models/: crawler_result.py  property.py
crawler/utils/: queue.py
crawlers/: main.py
