[project]
name = "crawlers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.6.3",
    "dynaconf>=3.2.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "N", "C901"]
ignore = ["N812", "E501", "C901"]

[tool.mypy]
strict = true
exclude = [".venv"]
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
]
