[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awslambdaric>=3.1.1",
    "boto3>=1.39.3",
    "crawl4ai<0.7",
    "dynaconf>=3.2.11",
    "litellm==1.73.6",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pytz>=2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["F", "E", "W", "I001", "N", "C901"]
ignore = ["N812", "E501", "C901"]

[tool.mypy]
strict = true
exclude = [".venv"]
plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
]
